fixing spacing of the timeline

--- a/Final_Project/scss_final_project.scss
+++ b/Final_Project/scss_final_project.scss
@@ -252,7 +252,7 @@ footer {
 	  li {
 		list-style-type: none;
 		position: relative;
-		width: 6px;
+		width: 7px;
 		margin: 0 auto;
 		padding-top: 50px;
 		background: #001d09;
@@ -310,6 +310,7 @@ footer {
 		  
 		  .stationname, .food, .mileage, .elevation {
 			margin-right: 8px;
+      text-align: center;
 		  }
 		}
 		
